[project]
name = "ffxpy"
version = "0.1.0"
description = "A project designed to simplify complex ffmpeg operations by providing a more user-friendly interface and workflow."
readme = "README.md"
authors = [
    { name = "chesham", email = "c.moweb@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "async-typer",
    "dateutils>=0.6.12",
    "isodate>=0.7.2",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
ffx = "ffxpy.__main__:app"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
async-typer = { path = "vendor/async_typer-0.2.3-py3-none-any.whl" }
