[project]
name = "ffxpy"
version = "0.3.1"
description = "A highly optimized CLI tool to simplify complex ffmpeg operations via YAML-defined workflows."
readme = "README.md"
authors = [
    { name = "chesham", email = "c.moweb@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["ffmpeg", "video", "multimedia", "workflow", "cli", "processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Video :: Conversion",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "dateutils>=0.6.12",
    "isodate>=0.7.2",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.1",
    "typer>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/chesham/ffxpy"
Repository = "https://github.com/chesham/ffxpy.git"
Issues = "https://github.com/chesham/ffxpy/issues"
Changelog = "https://github.com/chesham/ffxpy/blob/main/CHANGELOG.md"

[project.scripts]
ffx = "ffxpy.__main__:app"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["I", "E", "F", "Q"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["ffxpy"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = 'single'
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_return_any = true
warn_unused_configs = true

[dependency-groups]

dev = [
    "behave>=1.3.3",
    "coverage>=7.0.0",
    "grappa>=1.0.1",
    "mypy>=1.19.1",
    "ruff>=0.15.5",
    "tox>=4.24.1",
    "tox-uv>=1.25.0",
    "types-pyyaml>=6.0.12.20250915",
]

